# Program-traces

./: .dockerignore  .gitignore  CMakeLists.txt  CONFIGURATION.md  Dockerfile  README.md  SETUP_AND_CONFIGURATION.md  config.ini
.cache/clangd/index/: amcache_analyzer.cpp.A1374B845848BABB.idx  amcache_analyzer.hpp.6967ED6A666C0EC2.idx  analysis_data.hpp.C441F0CBB1103408.idx  ansicolor_sink-inl.h.7F5340F2C825DCDE.idx  ansicolor_sink.h.9559806C399FE8DB.idx  app_exception.hpp.440F24587FE7814E.idx  appcompat_flags_collector.cpp.89C034B090A14692.idx  appcompat_flags_collector.hpp.1D5ED41042C368A9.idx  autorun_analyzer.cpp.86C62D75D686A1E6.idx  autorun_analyzer.hpp.F4176347DB8D5953.idx  backtracer-inl.h.B2559DC1ECB4758E.idx  backtracer.h.B3E6E9BE061C4B46.idx  bam_dam_collector.cpp.3A61E98A730B1B8F.idx  bam_dam_collector.hpp.6603750A14CE8AEA.idx  base.h.D8FEFA47C4F18554.idx  base_sink-inl.h.21F0B0AB55C8ED68.idx  base_sink.h.0648E2225410499E.idx  bits_queue_collector.cpp.F167EFD1F6B1F2A3.idx  bits_queue_collector.hpp.EBFA1A65E5F76E5A.idx  circular_q.h.825B683B9220C86B.idx  codepage.h.13BE2EF6812BD075.idx  codepage.h.170DA46273512F6D.idx  codepage.h.1E2F84C673B91DDE.idx  codepage.h.48ED4B2274B34EDB.idx  codepage.h.7C2E4E281ED16C18.idx  codepage.h.825F9D0CBA1C5B6F.idx  codepage.h.8A7D6E90A4D026A8.idx  codepage.h.B25AC2200AE580E8.idx  common-inl.h.CA82202256D44366.idx  common.h.BEBFD26AB1F5EAD3.idx  config.cpp.DAE0BCCB6A962352.idx  config.hpp.8C527B3F9AC6DDEF.idx  config_exception.hpp.17D3D46D683ED7C8.idx  console_globals.h.BAE542D4760B4413.idx  csv_export_exception.hpp.CC526423AF8D8628.idx  csv_exporter.cpp.8CD368E225FC9AA0.idx  csv_exporter.hpp.A9C4BA0E12BF9ABC.idx  csv_exporter_filtering.cpp.8080231E84E9958E.idx  csv_exporter_filtering.hpp.8710ADD73E984AB1.idx  csv_exporter_utils.cpp.D6A58228E1587C1E.idx  (+224 more)
core/analysis/os_detection/: os_detection.cpp  os_info.hpp
core/analysis/program_analysis/: windows_disk_analyzer.cpp  windows_disk_analyzer.hpp
core/analysis/program_analysis/amcache/: amcache_analyzer.cpp  amcache_analyzer.hpp
core/analysis/program_analysis/autorun/: autorun_analyzer.cpp  autorun_analyzer.hpp
core/analysis/program_analysis/data/: analysis_data.hpp
core/analysis/program_analysis/logs/: eventlog_analyzer.cpp  eventlog_analyzer.hpp
core/analysis/program_analysis/prefetch/: prefetch_analyzer.cpp  prefetch_analyzer.hpp
core/exceptions/: parsing_exception.hpp
docs/: CONFIGURATION.md  DEPENDENCIES.md  OPTIMIZATION_PLAN.md  TESTING.md
libs/linux/libesedb/lib/: libesedb.la
libs/linux/libevt/lib/: libevt.la
libs/linux/libevtx/lib/: libevtx.la
libs/linux/libfsntfs/lib/: libfsntfs.la
libs/linux/libfusn/lib/: libfusn.la
libs/linux/libhibr/lib/: libhibr.la
libs/linux/libregf/lib/: libregf.la
libs/linux/libscca/lib/: libscca.la
libs/linux/libvshadow/lib/: libvshadow.la
libs/macos/libfusn/include/: libfusn.h
libs/macos/libvshadow/include/: libvshadow.h
parsers/event_log/data_model/: data.cpp  data.hpp  idata.hpp
parsers/event_log/evt/parser/: parser.cpp  parser.hpp
parsers/event_log/evtx/parser/: parser.cpp  parser.hpp
parsers/event_log/interfaces/: iparser.hpp
parsers/prefetch/data_model/: prefetch_versions.hpp
parsers/prefetch/parser/: parser.cpp  parser.hpp
parsers/registry/parser/: parser.cpp
scripts/: build_deps_linux.sh  install_deps.sh
src/: main.cpp
src/analysis/artifacts/: windows_disk_analyzer.cpp  windows_disk_analyzer.hpp
src/analysis/artifacts/amcache/: amcache_analyzer.cpp  amcache_analyzer.hpp
src/analysis/artifacts/autorun/: autorun_analyzer.cpp  autorun_analyzer.hpp
src/analysis/artifacts/common/: evidence_utils.hpp
src/analysis/artifacts/data/: analysis_data.hpp  recovery_contract.cpp  recovery_contract.hpp
src/analysis/artifacts/event_logs/: eventlog_analyzer.cpp  eventlog_analyzer.hpp  ieventlog_collector.hpp  security_context_analyzer.cpp  security_context_analyzer.hpp
src/analysis/artifacts/execution/: execution_evidence_analyzer.cpp  execution_evidence_analyzer.hpp  execution_evidence_config.hpp  execution_evidence_context.hpp  execution_evidence_helpers.hpp  iexecution_artifact_collector.hpp  itamper_signal_detector.hpp
src/analysis/artifacts/orchestrator/: recovery_stage_runner.cpp  recovery_stage_runner.hpp  windows_disk_analyzer.cpp  windows_disk_analyzer.hpp  windows_disk_analyzer_config.cpp  windows_disk_analyzer_export.cpp  windows_disk_analyzer_helpers.cpp  windows_disk_analyzer_helpers.hpp  (+7 more)
src/analysis/os/: ios_detection.hpp  os_detection.cpp  os_detection.hpp  os_info.hpp
src/common/: config_utils.hpp  number_utils.hpp  path_utils.hpp  string_utils.hpp  time_utils.hpp  utils.hpp
src/errors/: app_exception.hpp  config_exception.hpp  csv_export_exception.hpp  disk_analyzer_exception.hpp  logger_exception.hpp  os_detection_exception.hpp  parsing_exception.hpp  prefetch_exception.hpp  registry_exception.hpp
src/infra/cli/: cli_options.cpp  cli_options.hpp
src/infra/config/: config.cpp  config.hpp  simple_ini.hpp
src/infra/export/: csv_exporter.cpp  csv_exporter.hpp  csv_exporter_filtering.cpp  csv_exporter_filtering.hpp  csv_exporter_utils.cpp  csv_exporter_utils.hpp
src/infra/logging/: logger.cpp  logger.hpp  logger_exception.hpp
src/parsers/lnk/: lnk_parser.cpp  lnk_parser.hpp
src/parsers/ole/: compound_file.cpp  compound_file.hpp
tests/: CMakeLists.txt  placeholder_smoke.cpp  test_amcache_analyzer.cpp  test_artifact_paths_by_os.cpp  test_cli.cpp  test_cli_options.cpp  test_config_utils.cpp  test_csv_exporter.cpp  test_lnk_parser.cpp  test_os_detection.cpp  test_pipeline_win10.cpp  test_pipeline_win7.cpp  test_prefetch_parser.cpp  test_recovery_analyzers.cpp  test_recovery_contract.cpp  test_recovery_orchestrator.cpp  test_registry_parser.cpp  test_shimcache_decoder.cpp  test_signature_scanner.cpp  test_support.hpp  test_tamper_detectors.cpp  test_time_utils.cpp
tests/fixtures/: README.md
tests/fixtures/amcache/: recent_file_cache_win7.bcf
utils/: utils.hpp
utils/config/: config.cpp  config.hpp
utils/export/: csv_exporter.cpp  csv_exporter.hpp
(+176 files in other folders)
